<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="play_donate_title">Say Thanks</string>
    <string name="play_donate_subtitle">Support SpeakThat! on Google Play</string>
    <string name="play_donate_badge_count">Donations: %1$d</string>
    <string name="play_donate_badge_placeholder">Hi! My name is Mitchi and SpeakThat is a passion project of mine. I originally created it for my own use, and released it under an open source license. As more people have been using it lately, I\'m spending a lot of time maintaining it and answering support emails. If you can help me in any way, I\'d greatly appreciate it!</string>
    <string name="play_donate_tip_label">Support SpeakThat</string>
    <string name="play_donate_tip_label_small">Small tip</string>
    <string name="play_donate_tip_label_mid">Tip</string>
    <string name="play_donate_tip_label_large">Large tip</string>
    <string name="play_donate_price_unavailable">Price unavailable</string>
    <string name="play_donate_buy">Confirm</string>
    <string name="play_donate_more_ways">More ways to support</string>
    <string name="play_donate_more_ways_url">https://www.speakthat.app/support</string>
    <string name="play_donate_loading">Loading...</string>
    <string name="play_donate_loading_message">Loading donation options from Google Play...</string>
    <string name="play_donate_error">Billing unavailable. Please try again.</string>
    <string name="play_donate_thank_you">Thank you! Your donation count is now %1$d!</string>
    <string name="play_donate_offline_fallback">Unable to load Play Billing. Opening other donation options.</string>
    <string name="badge_selector_title">Logo style</string>
    <string name="badge_selector_description">Pick which logo to show on the home screen.</string>
    <string name="badge_selector_dialog_title">Choose a logo style</string>
    <string name="badge_option_default">Default logo</string>
    <string name="badge_option_bronze">Bronze</string>
    <string name="badge_option_silver">Silver</string>
    <string name="badge_option_gold">Gold</string>
    <string name="badge_option_emerald">Emerald</string>
    <string name="badge_option_sapphire">Sapphire</string>
    <string name="badge_option_amber">Amber</string>
    <string name="badge_option_amethyst">Amethyst</string>
    <string name="badge_option_ruby">Ruby</string>
</resources>

